<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.singlescreenapp.MainActivity">

    <ImageView
        android:id="@+id/diaristei_image_view"
        android:contentDescription="@string/contentDescription_diaristei_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/marginBottom_ImageView"
        android:layout_marginTop="@dimen/marginTop_ImageView"
        android:src="@drawable/diaristei" />

    <TextView
        android:id="@+id/diaristei_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/website_text_view"
        android:layout_marginLeft="@dimen/marginLeft_TextView"
        android:layout_marginStart="@dimen/marginStart_TextView"
        android:layout_marginTop="@dimen/marginTop_TextView"
        android:text="@string/diaristei_maid_services"
        android:textColor="@color/textColor_TextView" />

    <TextView
        android:id="@+id/website_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/phone_text_view"
        android:layout_marginLeft="@dimen/marginLeft_TextView"
        android:layout_marginStart="@dimen/marginStart_TextView"
        android:layout_marginTop="@dimen/marginTop_TextView"
        android:autoLink="web"
        android:text="@string/diaristei_site"
        android:textColor="@color/textColor_TextView" />

    <TextView
        android:id="@+id/phone_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/address_text_view"
        android:layout_marginLeft="@dimen/marginLeft_TextView"
        android:layout_marginStart="@dimen/marginStart_TextView"
        android:layout_marginTop="@dimen/marginTop_TextView"
        android:autoLink="phone"
        android:text="@string/phone_TextView"
        android:textColor="@color/textColor_TextView" />

    <TextView
        android:id="@+id/address_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/marginBottom_TextView"
        android:layout_marginLeft="@dimen/marginLeft_TextView"
        android:layout_marginStart="@dimen/marginStart_TextView"
        android:layout_marginTop="@dimen/marginTop_TextView"
        android:text="@string/address_TextView"
        android:textColor="@color/textColor_TextView" />

</RelativeLayout>